tests/negative/neg_rule4_null_deref.safe
-- Test: neg_rule4_null_deref
-- Description: Dereference of a possibly-null inferred reference without a guard.
-- Expected: REJECT null_dereference

package null_deref_test

   type value_box is record
      value : integer
      next : value_box

   function read_unsafe returns integer
      p : value_box = null

      return p.value  -- ERROR: P may be null
